# mallib

./: CMakeLists.txt  Cargo.toml  Makefile
include/linear_algebra/: matrix.hpp
src/: lib.rs  main.cpp  matrix.rs  models.rs
src/models/: linear.rs
